# SCARA-52900

./: CMakeLists.txt  README.md  package.xml
config/: controllers.yaml  shoulder.yaml  waist.yaml  wrist.yaml
launch/: all.launch  display.launch  gazebo.launch  waist.launch
rviz/: urdf.rviz
scara_52900/: package.xml
scara_52900/config/: elbow.yaml
scara_52900/launch/: all.launch  gazebo.launch  joints.launch  waist.launch
scara_52900/urdf/: scara_52900.urdf  scara_52900.urdf.xacro  scara_arm_pvc.urdf
urdf/: scara_52900.urdf.xacro
